# irmin-rs

./: .gitignore  CHANGES.md  Cargo.toml  Makefile  README.md  build.rs  dune-project
.github/workflows/: docs.yml  rust.yml
derive/: Cargo.toml
derive/src/: lib.rs
docs/: irmin.h
examples/: json_merge.rs  tezos.rs
src/: bindings.rs  client.rs  commit.rs  commit_key.rs  config.rs  dune  hash.rs  info.rs  irmin_rs.ml  irmin_string.rs  key.rs  lib.rs  metadata.rs  path.rs  remote.rs  repo.rs  store.rs  tree.rs  ty.rs  util.rs  value.rs
src/bindings/: config.rs  context.rs  mod.rs  repo.rs  store.rs  tree.rs
src/type/: array.rs  bytes.rs  mod.rs  string.rs  types.rs
test/: dune
tests/: dune  gen.ml  int_long_string_pair.txt  struct1.txt
