[package]
name = "irmin"
version = "0.3.1-beta.0"
authors = ["zach <zachshipko@gmail.com>"]
edition = "2021"
repository = "https://github.com/mirage/irmin"
documentation = "https://mirage.github.io/irmin-rs/irmin"
description = "Irmin bindings for rust"
keywords = ["irmin", "database", "git"]
license = "ISC"

[build-dependencies]
bindgen = "0.59"

[dependencies]
serde_json = "1"
serde = {version = "1", features = ["derive"]}

[features]
docs = []

[package.metadata.docs.rs]
features = [ "docs" ]
