[package]
name = "irmin"
version = "0.3.3"
authors = ["zach <zachshipko@gmail.com>"]
edition = "2021"
repository = "https://github.com/mirage/irmin"
description = "Irmin bindings for rust"
keywords = ["irmin", "database", "git"]
license = "ISC"
documentation = "https://docs.rs/irmin"

[build-dependencies]
bindgen = "0.64"

[dependencies]
serde_json = "1"
serde = {version = "1", features = ["derive"]}

[features]
docs = []

[package.metadata.docs.rs]
features = [ "docs" ]
